# alertmanager

./: CMakeLists.txt  INFO.md  README.md  build.sh  conanfile.py
alertManagerDemo/: CMakeLists.txt
alertManagerDemo/src/: AlertManagerDemo.cpp
alertManagerLib/: CMakeLists.txt  Config.cmake.in
alertManagerLib/include/alert_manager/: Alert.h  AlertManager.h
alertManagerLib/src/: AlertManager.cpp
protobuf/: CMakeLists.txt  alert.proto
test/: CMakeLists.txt
test/include/: MockAlertManager.h
test/src/: testAlertManager.cpp
